Fix typo in docs

--- a/package/config/overlays/support-aks.yml
+++ b/package/config/overlays/support-aks.yml
@@ -1,7 +1,7 @@
 #@ load("@ytt:data", "data")
 #@ load("@ytt:overlay", "overlay")
 
-#! On AKS, we disable the Admissions Enforcer so that it doesn't interfer with the Knative Eventing webhooks.
+#! On AKS, we disable the Admissions Enforcer so that it doesn't interfer with the Knative Serving webhooks.
 #! See: https://github.com/knative/pkg/issues/1590
 #! See: https://github.com/knative/serving/issues/12474
 #! See: https://learn.microsoft.com/en-us/azure/aks/faq#can-admission-controller-webhooks-impact-kube-system-and-internal-aks-namespaces
